--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
-    "sequelize": "^6.15.0"
+    "sequelize": "^6.15.0",
+    "sequelize-cli": "^6.4.1"
   }
 }
